Fix premature wrapping of home intro text on mobile+hybrid

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -38,7 +38,7 @@
   --font-size-h1: #{px-to-rem(46px)};
   --font-size-site-title: #{px-to-rem(32px)};
   --font-size-home-intro: #{px-to-rem(32px)};
-  --font-size-home-intro-hybrid: #{px-to-rem(28px)};
-  --font-size-home-intro-compact: #{px-to-rem(26px)};
+  --font-size-home-intro-hybrid: #{px-to-rem(27px)};
+  --font-size-home-intro-compact: #{px-to-rem(25px)};
   --font-size-entry-desc: #{px-to-rem(18px)};
 }
