--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -6,7 +6,6 @@
   align-items: center;
   text-align: left;
   gap: 28px;
-  padding: 0 22px;
   overflow: hidden;
   @include layout(hybrid) {
     align-items: flex-start;
